schema changes
added userrating and user, nomination now has a set of userrating